# CNN-Plants-Classifier

./: .gitignore  README.md  pyproject.toml  requirements.txt
misc/: accuracy_results.csv  ypred.npy
misc/single_augmentation/: single_augmentation.ipynb
notebooks/: final_model.ipynb  keras_tuner.ipynb  metrics.ipynb  supernet_choice.ipynb
notebooks/supernet_histories/: history_EfficientNetB0.npy  history_EfficientNetB7.npy  history_ResNet-50.npy  history_VGG16.npy  history_Xception.npy
report/: bibliography.bib  report.tex
